<resources>
    <string name="app_name">Covid Final Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pessoa">People</string>
    <string name="menu_nova_pessoa">New person</string>
    <string name="menu_edita_pessoa">Edit Person</string>


    <string name="carlos_cruz" translatable="false">Carlos Cruz</string>
    <string name="masculino">Male</string>
    <string name="_25_10_1990" translatable="false">25/10/1990</string>
    <string name="_990205170" translatable="false">990205170</string>
    <string name="nova_pessoa">New person</string>
    <string name="alterar_pessoa">Change Person</string>
    <string name="eliminar_pessoa">Delete person</string>
    <string name="nome">Name</string>
    <string name="sexo">Sex</string>
    <string name="data_de_nascimento">Birth date (dd/mm/yyyy)</string>
    <string name="telemovel">Mobile phone</string>
    <string name="distrito">District</string>
    <string name="guardar">Save</string>
    <string name="cancelar">Cancel</string>
    <string name="versao">People v. 1.0</string>
    <string name="preencha_nome">Fill in the name</string>
    <string name="preencha_sexo">Fill in the sex field</string>
    <string name="preencha_data_nascimento">Fill in date of birth</string>
    <string name="preencha_contacto_telemovel">Enter your mobile number</string>
    <string name="erro_ao_inserir_pessoa">Error entering person</string>
    <string name="erro_alterar_pessoa">Error when changing person</string>
    <string name="pessoa_alterada_sucesso">Successfully changed person</string>

    <string name="elimina_pessoa_fragment_label">Delete person?</string>
    <string name="erro_eliminar_pessoa">Error deleting person</string>
    <string name="pessoa_eliminada_com_sucesso">Person successfully deleted</string>
    <string name="nav_distrito_menu">District</string>
    <string name="nome_distrito">District Name</string>
    <string name="guarda" translatable="false">Guarda</string>
    <string name="eliminar_distrito">Eliminate District</string>
    <string name="alterar_distrito">Change District</string>
    <string name="novo_distrito">New District</string>


    <string name="erro_inserir_distrito">Error entering district</string>
    <string name="nome_lista_distrito">Districts</string>
    <string name="nome_lista_testes">Tests</string>
    <string name="titulo_testes">Test</string>
    <string name="projeto_final">Final project</string>
    <string name="covid_19" translatable="false">Covid19</string>

    <string name="titulo_novo_distrito">New District</string>
    <string name="erro_alterar_distrito">Error changing district</string>
    <string name="distrito_alterado_sucesso">District successfully changed</string>
    <string name="titulo_edita_distrito">Edit District</string>

    <string name="titulo_elimina_distrito">Delete District</string>
    <string name="erro_eliminar_distrito">Error deleting district</string>
    <string name="distrito_eliminado_sucesso">District successfully eliminated</string>
    <string name="Titulo_novo_teste">New Test</string>

    <string name="titulo_edita_teste">Edit Test</string>
    <string name="temperatura">Temperature</string>
    <string name="sintomas">Symptoms</string>
    <string name="estado_sa_de">Health state</string>
    <string name="data_do_teste_dd_mm_yyyy">Test Date (dd/mm/yyyy)</string>
    <string name="nome_da_pessoa">Persons name</string>
    <string name="preencha_temperatura">Fill in Temperature</string>
    <string name="preencha_sintoma">Fill in Symptoms</string>
    <string name="preencha_estado_saude">Fill in health status</string>
    <string name="preencha_data_teste">Fill in test date</string>
    <string name="erro_inserir_teste">Error inserting test</string>
    <string name="erro_alterar_teste">Error changing test</string>
    <string name="teste_alterado_sucesso">Test successfully changed</string>

    <string name="titulo_elimina_teste">Eliminar Teste</string>
    <string name="erro_eliminar_teste">Erro ao eliminar teste</string>
    <string name="teste_eliminado_sucesso">Teste eliminado com sucesso</string>
    <string name="alerta">Alerta</string>
    <string name="titulo_lista_alerta">Alertas</string>

    <string name="titutlo_novo_alerta">Novo Alerta</string>
    <string name="nome_do_alerta">Nome do Alerta</string>
    <string name="descri_o">Descrição</string>
    <string name="preencha_campo_alerta">Preencha campo alerta</string>
    <string name="erro_inserir_alerta">Erro ao inserir alerta</string>
    <string name="preencha_campo_descricao">Preencha o campo descrição</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_edita_alerta">Editar Alerta</string>
    <string name="erro_alterar_alerta">Erro ao alterar alerta</string>
    <string name="alerta_alterado_sucesso">Alerta alterado com sucesso</string>
    <string name="eliminar_alerta">Eliminar Alerta</string>
    <string name="alterar_alerta">Alterar Alerta</string>
    <string name="novo_alerta">Novo Alerta</string>
    <string name="erro_eliminar_alerta">Erro ao eliminar alerta</string>
    <string name="alerta_eliminado_sucesso">Alerta Eliminado com sucesso</string>
    <string name="titulo_elimina_alerta">Eliminar Alerta</string>
    <string name="negativo">Negativo</string>
    <string name="verde">Verde</string>
    <string name="titulo_lista_notificacao">Notificação</string>
    <string name="notifica_o">Notificação</string>
    <string name="resultado">Resultado</string>
    <string name="erro_inserir_notificacao">Erro ao inserir notificação</string>
    <string name="titulo_edita_notificacao">Editar Notificação</string>
    <string name="titulo_nova_notificacao">Nova Notificação</string>
    <string name="preencha_campo_resultado">Preencha o campo resultado</string>
    <string name="erro_alterar_notificacao">Erro ao alterar a notificação</string>
    <string name="notificacao_alterada_sucesso">Notificação alterada com sucesso</string>
    <string name="titulo_eliminar_notificacao">Eliminar Notificação</string>
    <string name="erro_eliminar_notificacao">Erro ao eliminar notificação</string>
    <string name="notificacao_eliminada_sucesso">Notificação eliminada com sucesso</string>


</resources>