<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_nova_pessoa"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/nova_pessoa"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_alterar_pessoa"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/alterar_pessoa"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_eliminar_pessoa"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/eliminar_pessoa"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>