<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/listaPessoaFragment"
            android:icon="@drawable/ic_baseline_emoji_people_24"
            android:title="@string/menu_pessoa" />
        <item
            android:id="@+id/novaPessoaFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_nova_pessoa" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_distrito"
            android:icon="@drawable/ic_baseline_location_city_24"
            android:title="@string/nav_distrito_menu" />
</group>
</menu>