<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/menu_pessoa"
    app:startDestination="@id/listaPessoaFragment">

    <fragment
        android:id="@+id/listaPessoaFragment"
        android:name="ipg.primeiro.projetofinalcovid.ui.ListaPessoaFragment.ListaPessoasFragment"
        android:label="@string/menu_pessoa"
        tools:layout="@layout/fragment_lista_pessoa">
        <action
            android:id="@+id/action_ListaPessoaFragment_to_NovaPessoaFragment"
            app:destination="@id/novaPessoaFragment" />
        <action
            android:id="@+id/action_listaPessoaFragment_to_editPessoaFragment"
            app:destination="@id/editPessoaFragment" />
        <action
            android:id="@+id/action_listaPessoaFragment_to_eliminaPessoaFragment"
            app:destination="@id/eliminaPessoaFragment" />
        <action
            android:id="@+id/action_listaPessoaFragment_to_distritoFragment"
            app:destination="@id/nav_distrito" />
    </fragment>

    <fragment
        android:id="@+id/novaPessoaFragment"
        android:name="ipg.primeiro.projetofinalcovid.ui.NovaPessoaFragment.NovaPessoaFragment"
        android:label="@string/menu_nova_pessoa"
        tools:layout="@layout/fragment_nova_pessoa">
        <action
            android:id="@+id/action_NovaPessoaFragment_to_ListaPessoaFragment"
            app:destination="@id/listaPessoaFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ipg.primeiro.projetofinalcovid.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/editPessoaFragment"
        android:name="ipg.primeiro.projetofinalcovid.EditaPessoaFragment"
        android:label="@string/menu_edita_pessoa"
        tools:layout="@layout/fragment_edita_pessoa">
        <action
            android:id="@+id/action_editPessoaFragment_to_listaPessoaFragment"
            app:destination="@id/listaPessoaFragment" />
    </fragment>
    <fragment
        android:id="@+id/eliminaPessoaFragment"
        android:name="ipg.primeiro.projetofinalcovid.EliminaPessoaFragment"
        tools:layout="@layout/fragment_elimina_pessoa" >
        <action
            android:id="@+id/action_eliminaPessoaFragment_to_listaPessoaFragment"
            app:destination="@id/listaPessoaFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_distrito"
        android:name="ipg.primeiro.projetofinalcovid.ui.Distrito.DistritoFragment"
        android:label="distrito_fragment"
        tools:layout="@layout/fragment_distrito" >
        <action
            android:id="@+id/action_distritoFragment_to_listaPessoaFragment"
            app:destination="@id/listaPessoaFragment" />
    </fragment>
</navigation>